--- a/template_toc.ejs
+++ b/template_toc.ejs
@@ -8,21 +8,19 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>JBoss hibakeresés - Gondolatok (Fazekas László blogja)</title>
+	<title>Gondolatok (Fazekas László blogja)</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="Android, Android fejlesztő, Android programozó, Gondolatok, Fazekas László, PHP, PHP fejlesztő, J2EE, Java, J2EE fejelsztő, szabadúszó, programozó" />
 	<meta name="description" content="Gondolatok - Fazekas László blogja" />
 	<meta name="robots" content="index, follow, max-video-preview:-1, max-snippet:-1, max-image-preview:large" />
 	<meta property="og:locale" content="hu_HU" />
 	<meta property="og:type" content="article" />
-	<meta property="og:title" content="JBoss hibakeresés" />
-	<meta property="og:description" content="JBoss hibakeresés" />
+	<meta property="og:title" content="Gondolatok - Fazekas László blogja" />
+	<meta property="og:description" content="Gondolatok - Fazekas László blogja" />
 	<meta property="og:site_name" content="Gondolatok (Fazekas László blogja)" />
-	<meta property="article:published_time" content="2010-02-15 14:57:58" />
-	<meta property="article:modified_time" content="2010-02-21 17:06:18" />
-	<link rel="stylesheet" href="../../assets/css/bootstrap.css">
-	<link rel="stylesheet" href="../../assets/css/bootstrap-responsive.css">
-	<link rel="stylesheet" href="../../assets/css/app.css">
+	<link rel="stylesheet" href="assets/css/bootstrap.css">
+	<link rel="stylesheet" href="assets/css/bootstrap-responsive.css">
+	<link rel="stylesheet" href="assets/css/app.css">
 	<style>
 		.blog-title {
 			opacity: 0.1;
@@ -106,29 +104,28 @@
 		<div class="content row blog-content">
 			<div class="span2 hidden-phone hidden-tablet" style="margin-left: 70px;"></div>
 			<div class="span7" style="margin-left: 0px;" role="main">
-				<article class="post-727 post type-post status-publish format-standard hentry category-nincs-kategorizalva">
+				<% for(const post of posts) { %>
+				<article class="post-727 post type-post status-publish format-standard sticky hentry category-nincs-kategorizalva">
 					<header>
-						<h1 class="entry-title">JBoss hibakeresés</h1>
+						<h2><a href="<%= `https://thebojda.github.io/my-wordpress-blog/archives/${post.id}` %>"><%= post.title %></a></h2>
 					</header>
-					<div class="entry-content">
-						Mostanában elég sokat szívtunk néhány hibával egy JBoss-on futó rendszerben. A legtöbb hiba persze fejlesztéskor rögtön szemet szúr, vagy ha mégsem, úgy a log alapján hamar megtalálható az oka, van azonban néhány elég nehezen felderíthető. A legutálatosabb, mikor a nem optimális kód, vagy egy rejtett (akár több metódus híváson keresztül ívelő) végtelen ciklus annyira leterheli a rendszert, hogy az képtelen válaszolni (kvázi DoS-olja azt). PHP esetén van erre egy nagyon egyszerű mechanizmus, ami figyeli, hogy mi mennyi ideig fut, és ha túl sok idő telt el, egyszerűen kilövi. Nem is csoda, hogy a hosting szolgáltatók körében a PHP a leggyakoribb, hiszen erre könnyen lehet biztonságos hosting szolgáltatást építeni (a jogosultságok, memória limitek, idő limitek jó beállításával kiküszöbölhető, hogy a felhasználó megölje a szervert). Ilyen mechanizmust nem találtam JBoss-hoz (Tomcat-hez, mert valójában az intézi a web-es dolgokat), így marad a szerver újraindítása, és a log fájlok bújása.
-
-Az ilyen hibák felderítésére a legegyszerűbb módszer, hogy a JBoss PID-re kiadunk egy kill -3 -at, aminek hatására a Java VM a log-ba hányja az aktuális szálak állapotát stack trace-el. Ilyen kill -3 -ból érdemes többet is nyomni néhány másodperces eltéréssel, hogy később ne csak az utolsó állapotot lássuk a szálaknak, hanem az egyes szálak működését folyamatában (pl. egy több metódusos végtelen ciklust így lehet leginkább kiszűrni). A baj az ilyen thread dump-okkal az, hogy a processzor használatot nem látjuk belőlük, így nem látszik, hogy pontosan melyik szálak próbálják megenni a processzort. Hogy ezt megtudjuk, adjunk ki egy ps -L auxH parancsot, ami az egyes szálak processzorhasználatát mutatja. A log-ot, és a ps eredményét az LWP/nid köti össze. A ps-ben látható LWP a szál egyedi azonosítója, amit hexadecimális formában nid néven a thread dumpban is megtalálunk. Tehát nincs más dolgunk, mint megkeresni a kiugró, extrém magas processzor használatot mutató szálakat, az ezekhez tartozó LWP-ket hexadecimálisra váltani, majd belekeresni a logban, hogy a hozzá tartozó szál mit csinál. Ezzel a módszerrel viszonylag egyszerűen megtalálhatjuk a kód kritikus részeit.
-
-Annak idején én külföldi blog-ok alapján szedtem össze ezt a módszert, így gondoltam megosztom magyar nyelven is, hátha mások is hasznát veszik.
+					<div class="entry-summary">
+						<p>
+							<%= post.summary %> …  <a href="<%= `https://thebojda.github.io/my-wordpress-blog/archives/${post.id}` %>">Folytatás</a>
+						</p>
 					</div>
 					<footer>
-						<p><br />Originally published at <a href="http://lf.estontorise.hu/archives/14">http://lf.estontorise.hu/archives/14</a> on 2010-02-15 14:57:58.</p>
 					</footer>
 				</article>
+				<% } %>
 			</div><!-- /.main -->
 			<aside role="complementary">
 				<div class="span3" style="width: 190px; opacity: 0.6; font-size: 10px;">
 					<div style="background-color: #eee; padding: 5px;">
-						<img src="../../assets/img/profile.jpg" class="img-rounded" alt="Laszlo Fazekas (TheBojda)">
+						<img src="assets/img/profile.jpg" class="img-rounded" alt="Laszlo Fazekas (TheBojda)">
 						<p style="margin-top: 10px;">
 							Szabadúszó fejlesztőként dolgozom már jópár éve. Főleg J2EE, Android, és PHP projekteket vállalok, de sok más technológiába belekóstoltam már.
-							Bővebb információért olvasd el <a href="../../assets/fazekas_laszlo_cv_hu.pdf">szakmai önéletrajzomat</a>.</p>
+							Bővebb információért olvasd el <a href="assets/fazekas_laszlo_cv_hu.pdf">szakmai önéletrajzomat</a>.</p>
 						<p>Hobbim a programozás mellett az olvasgatás. Főleg a természettudományok érdekelnek, azon belül is leginkibb a fizika.</p>
 						<p>A jelenlegi mellett van egy új blogom <a href="https://medium.com/@thebojda">Medium</a>-on, egyéb gondolataimat, vagy az általam érdekesnek talált cikkeket/híreket pedig általában <a
 								href="https://plus.google.com/115334992192871078712">Google+</a>-on osztom meg. A jobb bejegyzéseknek kicsatornáztam egy külön blogba, amit a <a href="http://gp.estontorise.hu/" target="_blank">gp.estontorise.hu</a>
@@ -136,8 +133,8 @@ Annak idején én külföldi blog-ok alapján szedtem össze ezt a módszert, í
 								href="https://twitter.com/TheBojda" target="_blank">Twitteren</a> is. E-mailben pedig a <a id="email" href="#"></a> címen érhetsz el.</p>
 						<script>var mail = document.getElementById("email"); mail.innerHTML = "laszlo" + "." + "fazekas" + "@" + "estotorise." + "hu";</script>
 						<p>
-							<a href="https://twitter.com/TheBojda" target="_blank"><img src="../../assets/img/twitter.png" alt="twitter" /></a>
-							<a href="https://github.com/TheBojda" target="_blank"><img src="../../assets/img/github.png" alt="github" /></a>
+							<a href="https://twitter.com/TheBojda" target="_blank"><img src="assets/img/twitter.png" alt="twitter" /></a>
+							<a href="https://github.com/TheBojda" target="_blank"><img src="assets/img/github.png" alt="github" /></a>
 						</p>
 					</div>
 				</div>
